busy on templates and pricing

--- a/components/addon-prices.html
+++ b/components/addon-prices.html
@@ -1,15 +1,12 @@
-<div class="px-4 sm:px-6 lg:px-8">
-    <div class="mt-8 flow-root">
-      <div class="-mx-4 -my-2 overflow-x-auto sm:-mx-6 lg:-mx-8">
-        <div
-          class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
-        >
+    <div class="flow-root">
+      <div class="overflow-x-auto md:overflow-visible">
+       
           <table class="min-w-full">
             <thead class="bg-white">
               <tr>
                 <th
                   scope="col"
-                  class="py-3.5 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-3"
+                  class="px-3 py-3.5 text-left text-sm font-semibold text-gray-900"
                 >
                   Feature
                 </th>
@@ -140,7 +137,9 @@
                     Generating and sourcing industry specific content
                   </div>
                 </td>
-                <td class="whitespace-normal px-3 py-4 text-sm text-gray-500">
+                <!-- <td class="whitespace-normal flex-wrap px-3 py-4 text-sm text-gray-500"> -->
+                  <td class="break-words whitespace-normal overflow-hidden text-wrap text-sm text-gray-500">
+
                  SEO, Adverting, Technical Copywriting, image sourcing, illustration packs etc.
                 </td>
                 <td class="whitespace-nowrap px-3 py-4 text-sm text-gray-500">
@@ -278,6 +277,28 @@
                   R299.00
                 </td>
               </tr>
+              <tr class="border-b border-gray-200">
+                <td
+                  class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-3"
+                >
+                  <div class="font-medium text-gray-900">
+                    Content Updates
+                  </div>
+                  <div class="mt-1 truncate text-gray-500">
+                    Add/Edit/Delete website content
+                  </div>
+                </td>
+                <td
+                  class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-500 sm:pl-3"
+                >
+                  New products, services, descriptions, images etc.
+                </td>
+                <td
+                  class="px-3 py-3.5 text-left text-sm font-semibold text-gray-500"
+                >
+                  R299.00
+                </td>
+              </tr>
                <!-- Design Services -->
                <tr class="border-t border-gray-200">
                 <th
@@ -361,6 +382,57 @@
                   class="px-3 py-3.5 text-left text-sm font-semibold text-gray-500"
                 >
                   On qoute
+                </td>
+              </tr>
+
+              <!-- Support -->
+              <tr class="border-t border-gray-200">
+                <th
+                  colspan="5"
+                  scope="colgroup"
+                  class="bg-gray-50 py-2 pl-4 pr-3 text-left text-sm font-semibold text-gray-900 sm:pl-3"
+                >
+                  Support & Maintenance
+                </th>
+              </tr>
+              <tr class="border-b border-gray-200">
+                <td
+                  class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-3"
+                >
+                  <div class="font-medium text-gray-900">Priority support</div>
+                  <div class="mt-1 truncate text-gray-500">
+                    Fast response times and priority support
+                  </div>
+                </td>
+                <td
+                  class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-500 sm:pl-3"
+                >
+                  24/7 WhatsApp support, 1 hour response time, priority ticketing etc. 
+                </td>
+                <td
+                  class="px-3 py-3.5 text-left text-sm font-semibold text-gray-500"
+                >
+                  R499.00 pm
+                </td>
+              </tr>
+              <tr class="border-b border-gray-200">
+                <td
+                  class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:pl-3"
+                >
+                  <div class="font-medium text-gray-900">Frequent Maintenance</div>
+                  <div class="mt-1 truncate text-gray-500">
+                    Regular updates, backups and site maintenance
+                  </div>
+                </td>
+                <td
+                  class="whitespace-nowrap py-4 pl-4 pr-3 text-sm font-medium text-gray-500 sm:pl-3"
+                >
+                  Weekly updates, backups, security checks, theme updates etc. 
+                </td>
+                <td
+                  class="px-3 py-3.5 text-left text-sm font-semibold text-gray-500"
+                >
+                  R299.00 pm
                 </td>
               </tr>
             </tbody>
