--- a/components/navbar.html
+++ b/components/navbar.html
@@ -10,32 +10,30 @@
         </a>
       </div>
       
-      <div class="hidden lg:flex lg:gap-x-12">
+      <div class="hidden lg:flex lg:justify-center lg:gap-x-12">
         <a
-          href="#"
+          href="/"
           class="text-sm font-semibold leading-6 text-gray-500 hover:text-indigo-200"
-          >Product</a
+          >Home</a
         >
         <a
-          href="#"
+          href="../pricing.html"
           class="text-sm font-semibold leading-6 text-gray-500 hover:text-indigo-200"
-          >Features</a
+          >Pricing</a
         >
         <a
-          href="#"
+          href="../templates.html"
           class="text-sm font-semibold leading-6 text-gray-500 hover:text-indigo-200"
-          >Marketplace</a
+          >Templates</a
         >
         <a
-          href="#"
+          href="../about.html"
           class="text-sm font-semibold leading-6 text-gray-500 hover:text-indigo-200"
-          >Company</a
+          >About</a
         >
       </div>
       <div class="hidden lg:flex lg:flex-1 lg:justify-end">
-        <a href="#" class="text-sm font-semibold leading-6 text-white"
-          >Log in <span aria-hidden="true">&rarr;</span></a
-        >
+        
       </div>
       <div x-data="{ mobileMenuOpen: false }" class="flex lg:hidden">
         <!-- Mobile menu toggle button -->
@@ -86,7 +84,7 @@
           >
             <div class="flex items-center justify-between">
               <a href="#" class="-m-1.5 p-1.5">
-                <img class="h-8 w-auto" src="/img/logo.png" alt="" />
+                <img class="h-8 w-auto" src="../img/logo.png" alt="" />
               </a>
               <button
                 @click="mobileMenuOpen = false"
@@ -115,33 +113,33 @@
                   class="space-y-2 py-6 flex flex-col items-center w-full"
                 >
                   <a
-                    href="#"
+                    href="/"
                     class="w-full text-center block rounded-lg px-3 py-2 font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-                    >Product</a
+                    >Home</a
+                  >
+                  <a
+                    href="../pricing.html"
+                    class="w-full text-center block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                    >Pricing</a
+                  >
+                  <a
+                    href="../templates.html"
+                    class="w-full text-center block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
+                    >Templates</a
                   >
                   <a
                     href="#"
                     class="w-full text-center block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-                    >Features</a
-                  >
-                  <a
-                    href="#"
-                    class="w-full text-center block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-                    >Marketplace</a
-                  >
-                  <a
-                    href="#"
-                    class="w-full text-center block rounded-lg px-3 py-2 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
-                    >Company</a
+                    >About</a
                   >
                 </div>
-                <div class="py-6 flex justify-center">
+                <!-- <div class="py-6 flex justify-center">
                   <a
                     href="#"
                     class="w-full text-center block rounded-lg px-3 py-2.5 text-base font-semibold leading-7 text-gray-900 hover:bg-gray-50"
                     >Log in</a
                   >
-                </div>
+                </div> -->
               </div>
             </div>
           </div>
@@ -152,6 +150,6 @@
     <!-- Mobile menu, show/hide based on menu open state. -->
     <!-- Mobile menu, show/hide based on menu open state -->
   </header>
-  <script src="//unpkg.com/alpinejs" defer></script>
+  <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.14.8/dist/cdn.min.js"></script>
 
 </body>
