--- a/components/feature-comparison.html
+++ b/components/feature-comparison.html
@@ -22,7 +22,7 @@
         <tr>
             <td class="py-4 text-sm text-gray-900">SEO Setup</td>
             <td class="py-4 text-center text-sm text-gray-900">Basic SEO (meta tags)</td>
-            <td class="py-4 text-center text-sm text-gray-900">Advanced SEO</td>
+            <td class="py-4 text-center text-sm text-gray-900"><a class="" href="#">Advanced SEO</a> </td>
             <td class="py-4 text-center text-sm text-gray-900">Premium SEO</td>
         </tr>
         <tr>
